--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -7,20 +7,6 @@
     android:layout_height="match_parent"
     android:background="#fff">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="64dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="64dp" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="344dp"
         android:layout_height="456dp"
@@ -78,7 +64,8 @@
             android:elevation="16dp"
             android:ems="10"
             android:hint="Email"
-            android:textColor="#8F8F8F"
+            android:textColor="#000000"
+            android:textColorHint="#80000000"
             android:backgroundTint="#F2F1F1"
             android:inputType="text"
             android:paddingHorizontal="20dp"
@@ -108,12 +95,12 @@
         android:id="@+id/imgbtnGoback"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="48dp"
         android:background="@android:color/transparent"
-        app:tint="#0B0A0A"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/arrow_back" />
+        app:srcCompat="@drawable/arrow_back"
+        app:tint="#0B0A0A" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
