--- a/app/src/main/res/layout/activity_newpassword.xml
+++ b/app/src/main/res/layout/activity_newpassword.xml
@@ -24,13 +24,13 @@
         android:id="@+id/imgbtnGoback"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="48dp"
         android:background="@android:color/transparent"
-        app:tint="#0B0A0A"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/arrow_back" />
+        app:srcCompat="@drawable/arrow_back"
+        app:tint="#0B0A0A" />
 
     <TextView
         android:id="@+id/textView3"
@@ -80,7 +80,8 @@
         android:ems="10"
         android:hint="Verification code"
         android:fontFamily="@font/kufam"
-        android:textColor="#8F8F8F"
+        android:textColor="#000000"
+        android:textColorHint="#80000000"
         android:backgroundTint="#F2F1F1"
         android:inputType="text"
         android:paddingHorizontal="20dp"
@@ -99,7 +100,8 @@
         android:ems="10"
         android:hint="New password"
         android:fontFamily="@font/kufam"
-        android:textColor="#8F8F8F"
+        android:textColorHint="#80000000"
+        android:textColor="#000000"
         android:backgroundTint="#F2F1F1"
         android:inputType="text"
         android:paddingHorizontal="20dp"
