--- a/app/src/main/res/layout/layout_image.xml
+++ b/app/src/main/res/layout/layout_image.xml
@@ -3,16 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="10dp">
 
     <GridView
         android:id="@+id/listImage"
-        android:layout_width="match_parent"
-        android:layout_height="670dp"
-        android:numColumns="2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:horizontalSpacing="5dp"
-        android:verticalSpacing="5dp"
+        android:numColumns="2"
         android:scrollbars="none"
+        android:verticalSpacing="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
