--- a/app/src/main/res/layout/activity_chatbox.xml
+++ b/app/src/main/res/layout/activity_chatbox.xml
@@ -111,12 +111,14 @@
             android:layout_width="0dp"
             android:background="@drawable/round_button"
             android:elevation="2dp"
-            android:paddingStart="5dp"
             android:paddingVertical="5dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="4dp"
+            android:paddingLeft="15dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="#000000"
+            android:textColorHint="#80000000"
             android:hint="Type a message"/>
 
         <ImageButton
