--- a/app/src/main/res/layout/activity_new_status.xml
+++ b/app/src/main/res/layout/activity_new_status.xml
@@ -25,7 +25,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="24dp"
         android:background="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,6 +38,7 @@
         android:layout_height="40dp"
         android:fontFamily="@font/kufam_bold"
         android:text="New status"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/imgbtnGoback"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,6 +133,7 @@
             android:id="@+id/contentStatus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:hint="Whats new?" />
     </com.google.android.material.textfield.TextInputLayout>
 
