--- a/app/src/main/res/layout/activity_package.xml
+++ b/app/src/main/res/layout/activity_package.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff">
+    android:background="#fff"
+    android:scrollbars="none">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,7 +35,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/shape_rectangle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,16 +70,15 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerBenefit"
                 android:layout_width="match_parent"
-                android:layout_height="290dp"
+                android:layout_height="330dp"
                 android:layout_marginHorizontal="35dp"
-                android:layout_marginTop="10dp"
                 app:layout_constraintStart_toStartOf="@+id/textView20"
                 app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerPackage"
                 android:layout_width="match_parent"
-                android:layout_height="280dp"
+                android:layout_height="240dp"
                 android:layout_marginHorizontal="45dp"
                 app:layout_constraintEnd_toEndOf="@+id/recyclerBenefit"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -88,16 +88,14 @@
                 android:id="@+id/btnNext"
                 android:layout_width="140dp"
                 android:layout_height="50dp"
-                android:layout_marginBottom="40dp"
                 android:backgroundTint="#93BC66"
                 android:fontFamily="@font/kufam_bold_italic"
                 android:text="Next"
                 android:textColor="#fff"
                 android:textSize="20dp"
+                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/guideline2"
-                app:layout_constraintTop_toBottomOf="@+id/recyclerPackage"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/recyclerPackage" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
