--- a/app/src/main/res/layout/activity_qrcode.xml
+++ b/app/src/main/res/layout/activity_qrcode.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff">
-
     <ImageButton
         android:id="@+id/imageBtnHome"
         android:layout_width="40dp"
@@ -18,71 +17,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/home" />
 
-    <ImageView
-        android:id="@+id/imgQR"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:background="@android:color/transparent"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageBtnHome"
-        app:layout_constraintVertical_bias="0.287"
-        app:srcCompat="@drawable/qr_code" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        app:layout_constraintStart_toStartOf="@+id/imgQR"
-        app:layout_constraintTop_toBottomOf="@+id/imgQR" >
-        <TextView
-            android:id="@+id/textView18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/kufam"
-            android:text="Your "
-            android:textColor="#000000"
-            android:textSize="40dp"
-            app:layout_constraintStart_toStartOf="@+id/imgQR"
-            app:layout_constraintTop_toBottomOf="@+id/imgQR" />
-
-        <TextView
-            android:id="@+id/textView24"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/kufam"
-            android:textSize="40dp"
-            android:textColor="#93BC66"
-            android:text="QR "
-            app:layout_constraintBottom_toBottomOf="@+id/textView18"
-            app:layout_constraintStart_toEndOf="@+id/textView18"
-            app:layout_constraintTop_toTopOf="@+id/textView18" />
-
-        <TextView
-            android:id="@+id/textView25"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/kufam"
-            android:textSize="40dp"
-            android:textColor="#000000"
-            android:text="code"
-            app:layout_constraintBottom_toBottomOf="@+id/textView24"
-            app:layout_constraintStart_toEndOf="@+id/textView24"
-            app:layout_constraintTop_toTopOf="@+id/textView24" />
-    </LinearLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:background="#000000"
         android:foregroundGravity="center_vertical"
-        android:paddingHorizontal="80dp"
+        android:paddingHorizontal="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
@@ -91,6 +36,7 @@
             android:layout_height="70dp"
             android:layout_marginTop="15dp"
             android:background="@android:color/transparent"
+            android:onClick="addcode"
             android:scaleType="fitXY"
             android:src="@drawable/qr_code"
             app:layout_constraintStart_toStartOf="parent"
@@ -109,12 +55,13 @@
             app:layout_constraintTop_toBottomOf="@+id/btnQRcode" />
 
         <ImageButton
+            android:onClick="addcode"
             android:id="@+id/btnScancode"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:background="@android:color/transparent"
             android:scaleType="fitXY"
-            android:src="@drawable/qr_code"
+            android:src="@drawable/qr_code_scanner"
             app:layout_constraintBottom_toBottomOf="@+id/btnQRcode"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/btnQRcode" />
@@ -132,6 +79,16 @@
             app:layout_constraintTop_toBottomOf="@+id/btnScancode" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <FrameLayout
+        android:id="@+id/QRcontent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageBtnHome">
+
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
