--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -7,30 +7,18 @@
     android:layout_height="match_parent"
     android:background="#fff">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="64dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="64dp" />
 
     <TextView
         android:id="@+id/tvsignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
-        android:text="Sign up"
+        android:layout_marginEnd="40dp"
         android:fontFamily="@font/kufam_bold"
+        android:text="Sign up"
         android:textColor="#93BC66"
         android:textSize="13sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -105,7 +93,8 @@
             android:elevation="16dp"
             android:ems="10"
             android:hint="Email/Phone number"
-            android:textColor="#8F8F8F"
+            android:textColor="#000000"
+            android:textColorHint="#80000000"
             android:backgroundTint="#F2F1F1"
             android:inputType="text"
             android:textSize="12sp"
@@ -123,7 +112,8 @@
             android:elevation="16dp"
             android:ems="10"
             android:hint="Password"
-            android:textColor="#8F8F8F"
+            android:textColor="#000000"
+            android:textColorHint="#80000000"
             android:backgroundTint="#F2F1F1"
             android:inputType="textPassword"
             android:textSize="12sp"
@@ -139,7 +129,7 @@
             android:layout_marginTop="10dp"
             android:textStyle="italic"
             android:textSize="12sp"
-            android:textColor="#000000"
+            android:textColor="#B3000000"
             android:text="Forget your pasword?"
             app:layout_constraintEnd_toEndOf="@+id/edPassword"
             app:layout_constraintStart_toStartOf="@+id/edPassword"
