--- a/app/src/main/res/layout/layout_package_time.xml
+++ b/app/src/main/res/layout/layout_package_time.xml
@@ -6,18 +6,18 @@
     android:layout_height="wrap_content"
     android:background="@drawable/border_button"
     android:paddingHorizontal="15dp"
-    android:paddingVertical="5dp"
-    android:layout_marginVertical="15dp">
+    android:paddingVertical="3dp"
+    android:layout_marginVertical="10dp">
 
         <TextView
             android:id="@+id/tvTitlePackage"
             android:layout_width="wrap_content"
             android:layout_height="28dp"
             android:layout_marginStart="10dp"
-            android:fontFamily="@font/kufam"
+            android:fontFamily="@font/kufam_bold"
+            android:textColor="#000000"
             android:text="TextView"
             android:textSize="15sp"
-            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
