--- a/app/src/main/res/layout/layout_status.xml
+++ b/app/src/main/res/layout/layout_status.xml
@@ -8,7 +8,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/image_status_recycler"
         android:layout_width="match_parent"
-        android:layout_height="670dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
