--- a/app/src/main/res/layout/layout_status_grid.xml
+++ b/app/src/main/res/layout/layout_status_grid.xml
@@ -5,13 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/avatar"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="10dp"
         android:background="#CEE9BE"
         app:circularflow_radiusInDP="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,9 +48,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/kufam_bold"
         android:text="The Stone Church"
+        android:textColor="#000000"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="@+id/avatar"
         app:layout_constraintTop_toBottomOf="@+id/avatar" />
@@ -60,6 +62,7 @@
         android:layout_height="wrap_content"
         android:paddingRight="25dp"
         android:fontFamily="@font/kufam"
+        android:textColor="#000000"
         android:text="Centrally located in Sapa town, this architecture has been existence for over 100 years. Although, it is small but the design is nice and harmonized with the surroundings. Love it as i always like capturing photos of old architecture."
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +73,7 @@
         android:id="@+id/recyclerViewImage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:numColumns="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/avatar"
